--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@ button:hover {
     <div class="container">
         <h1>Colores que combinan</h1>
         <div id="palette" style="display: flex; gap: 10px; justify-content: center; margin-top: 20px;">
-            <div style="width: 50px; height: 50px; background-color: #FF5733;"></div>
-            <div style="width: 50px; height: 50px; background-color: #33FF57;"></div>
-            <div style="width: 50px; height: 50px; background-color: #3357FF;"></div>
-            <div style="width: 50px; height: 50px; background-color: #F1C40F;"></div>
-            <div style="width: 50px; height: 50px; background-color: #8E44AD;"></div>
+            <div style="width: 50px; height: 50px;" ></div>
+            <p id="name-color">#000</p>
+            <div style="width: 50px; height: 50px;" ></div>
+            <p id="name-color">#000</p>
+            <div style="width: 50px; height: 50px;" ></div>
+            <p id="name-color">#000</p>
+        </div>
     </div>
     <script>
         // función que genera un color hexadecimal aleatorio
@@ -96,6 +98,41 @@ document.getElementById('color-btn').addEventListener('click', function () {
     document.getElementById('color-code').textContent = newColor; // el nombre del color de fondo
 });
 
+function getComplementaryColor(hex) {
+    // Convertir el color hexadecimal a RGB
+    const r = parseInt(hex.slice(1, 3), 16);
+    const g = parseInt(hex.slice(3, 5), 16);
+    const b = parseInt(hex.slice(5, 7), 16);
+
+    // Calcular el color complementario
+    const compR = (255 - r).toString(16).padStart(2, '0');
+    const compG = (255 - g).toString(16).padStart(2, '0');
+    const compB = (255 - b).toString(16).padStart(2, '0');
+
+    return `#${compR}${compG}${compB}`;
+}
+document.getElementById('color-btn').addEventListener('click', function () {
+    const baseColor = getRandomColor();
+    const complementaryColor = getComplementaryColor(baseColor);
+
+    const paletteDivs = document.querySelectorAll('#palette div');
+    paletteDivs[0].style.backgroundColor = baseColor;
+    paletteDivs[1].style.backgroundColor = complementaryColor;
+    paletteDivs[2].style.backgroundColor = baseColor;
+    document.getElementById('name-color').textContent = baseColor; 
+
+
+    // Generar colores análogos
+    // Convertir el color hexadecimal a HSL
+    // const analog1 = getAnalogousColor(baseColor, 230);
+    // const analog2 = getAnalogousColor(baseColor, -30);
+    // paletteDivs[2].style.backgroundColor = analog1;
+    // paletteDivs[3].style.backgroundColor = analog2;
+
+    // Generar un color triádico
+    // const triadic = getTriadicColor(baseColor);
+    // paletteDivs[4].style.backgroundColor = triadic;
+});
     </script>
 </body>
 </html>
