--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 }
 .palette-style{
     display: flex;
-    /* flex-direction: row; */
+    flex-direction: row;
     gap: 20px;
     justify-content: center;
     margin-top: 20px;
@@ -46,30 +46,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:10px;
+    position: relative;
 }
-.color-block p{
-    margin-bottom: 10px;
+.color-label{
+    position: absolute;
+    top: -25px;
     font-weight: bold;
     color: #333;
 }
-.color-block div{
+.color-box{
     width: 100px; 
     height: 100px;
     border:none;
 }
-/* .palette-style div{
-    width: 100px; 
-    height: 100px;
-    margin-top: 10px;
-    border:none;
-}
-.palette-style p{
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 20px;
-    gap:10;
-} */
 
 h1 {
     margin-bottom: 20px;
@@ -110,16 +99,20 @@ button:hover {
         <button id="color-btn">Cambiar color</button>
             <div id="palette" class="palette-style">
                 <div class="color-block">
-                    <p><span id="color-name">#000</span></p>
-                    <div></div>
+                    <p class="color-label"><span id="color-name">#000</span></p>
+                    <div class="color-box"></div>
                 </div>
                 <div class="color-block">
-                    <p><span id="color-name-two">#000</span></p>
-                    <div ></div>
+                    <p class="color-label"><span id="color-name-two">#000</span></p>
+                    <div class="color-box"></div>
                 </div>
                 <div class="color-block">
-                    <p><span id="color-name-three">#000</span></p>
-                    <div></div>
+                    <p class="color-label"><span id="color-name-three">#000</span></p>
+                    <div class="color-box"></div>
+                </div>
+                <div class="color-block">
+                    <p class="color-label"><span id="color-name-four">#000</span></p>
+                    <div class="color-box"></div>
                 </div>
             </div>
     </div>
@@ -152,17 +145,81 @@ function getComplementaryColor(hex) {
 
     return `#${compR}${compG}${compB}`;
 }
+
+function rgbToHsl(r, g, b) {
+    r /= 255;
+    g /= 255;
+    b /= 255;
+
+    const max = Math.max(r, g, b), min = Math.min(r, g, b);
+    let h, s, l = (max + min) / 2;
+
+    if (max === min) {
+        h = s = 0; // gris
+    } else {
+        const d = max - min;
+        s = l > 0.5 ? d / (2 - max - min) : d / (max + min);
+        switch (max) {
+        case r: h = ((g - b) / d + (g < b ? 6 : 0)); break;
+        case g: h = ((b - r) / d + 2); break;
+        case b: h = ((r - g) / d + 4); break;
+        }
+        h *= 60;
+    }
+
+  return { h: Math.round(h), s: +(s * 100).toFixed(1), l: +(l * 100).toFixed(1) };
+}
+
+function hslToHex(h, s, l) {
+    s /= 100;
+    l /= 100;
+
+    const c = (1 - Math.abs(2 * l - 1)) * s;
+    const x = c * (1 - Math.abs((h / 60) % 2 - 1));
+    const m = l - c / 2;
+    let r, g, b;
+
+    if (h < 60)      [r, g, b] = [c, x, 0];
+    else if (h < 120)[r, g, b] = [x, c, 0];
+    else if (h < 180)[r, g, b] = [0, c, x];
+    else if (h < 240)[r, g, b] = [0, x, c];
+    else if (h < 300)[r, g, b] = [x, 0, c];
+    else             [r, g, b] = [c, 0, x];
+
+    r = Math.round((r + m) * 255).toString(16).padStart(2, '0');
+    g = Math.round((g + m) * 255).toString(16).padStart(2, '0');
+    b = Math.round((b + m) * 255).toString(16).padStart(2, '0');
+
+    return `#${r}${g}${b}`;
+}
+
+
+function getTriadicColors(hex) {
+    const r = parseInt(hex.slice(1, 3), 16);
+    const g = parseInt(hex.slice(3, 5), 16);
+    const b = parseInt(hex.slice(5, 7), 16);
+
+    const hsl = rgbToHsl(r, g, b);
+    const triad1 = hslToHex((hsl.h + 120) % 360, hsl.s, hsl.l);
+    const triad2 = hslToHex((hsl.h + 240) % 360, hsl.s, hsl.l);
+
+    return [triad1, triad2];
+}
+
 document.getElementById('color-btn').addEventListener('click', function () {
     const baseColor = getRandomColor();
     const complementaryColor = getComplementaryColor(baseColor);
+    const triadicColors = getTriadicColors(baseColor);
 
-    const paletteDivs = document.querySelectorAll('#palette div');
-    paletteDivs[0].style.backgroundColor = baseColor;
-    paletteDivs[1].style.backgroundColor = complementaryColor;
-    paletteDivs[2].style.backgroundColor = baseColor;
+    const paletteBoxes = document.querySelectorAll('.color-box');
+    paletteBoxes[0].style.backgroundColor = baseColor;
+    paletteBoxes[1].style.backgroundColor = complementaryColor;
+    paletteBoxes[2].style.backgroundColor = triadicColors[0];
+    paletteBoxes[3].style.backgroundColor = triadicColors[1];
     document.getElementById('color-name').textContent = baseColor; 
     document.getElementById('color-name-two').textContent = complementaryColor;
-    document.getElementById('color-name-three').textContent = baseColor;
+    document.getElementById('color-name-three').textContent = triadicColors[0];
+    document.getElementById('color-name-four').textContent = triadicColors[1];
 
 });
     </script>
