Cambio nombre de botones

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@ button:hover {
 </style>
 <body>
     <div class="container" id="color-container">
-        <h1>Colores al azar</h1>
+        <h1>Paletas de color</h1>
         <p>Color de fondo: <span id="color-code">#333</span></p>
-        <button id="color-btn">Cambiar color</button>
+        <button id="color-btn">Generar paleta</button>
             <div id="palette" class="palette-style">
                 <div class="color-block">
                     <p class="color-label"><span id="color-name">#000</span></p>
