--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@ p {
     margin-bottom: 20px;
 }
 
+.copy-icon {
+    cursor: pointer;
+    }
+    .copy-icon:hover {
+    stroke: #000000;
+    }
+
 #color-code {
     font-weight: bold;
     color: #333;
@@ -95,7 +102,15 @@ button:hover {
 <body>
     <div class="container" id="color-container">
         <h1>Paletas de color</h1>
-        <p>Color de fondo: <span id="color-code">#333</span></p>
+        <p id="textToCopy">Color de fondo: <span id="color-code">#333</span>
+        <svg class="copy-icon" onclick="copyText()" 
+        xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+        viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+        class="icon icon-tabler icons-tabler-outline icon-tabler-copy"><path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 
+        2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z" /><path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 
+        -2h10c.75 0 1.158 .385 1.5 1" /></svg> </p>
+
         <button id="color-btn">Generar paleta</button>
             <div id="palette" class="palette-style">
                 <div class="color-block">
@@ -117,111 +132,129 @@ button:hover {
             </div>
     </div>
     <script>
+    // función para copiar texto al portapapeles
+    function copyText() {
+        const text = document.getElementById("textToCopy").innerText;
+            navigator.clipboard.writeText(text).then(() => {
+            //alert("Texto copiado al portapapeles: " + text);
+            const icon = document.querySelector('.copy-icon');
+            icon.style.stroke = "#06b109"; // Cambia el color del icono a verde
+            //añadir un texto emergente
+            setTimeout(() => {
+                icon.style.stroke = "#1e00ff"; // Vuelve al color original después de 1 segundo
+            }, 1000);
+        }).catch(err => {
+            alert("Error al copiar el texto: ", err);
+        });
+    }
         // función que genera un color hexadecimal aleatorio
-function getRandomColor() {
-    const hexChars = '0123456789ABCDEF';
-    let color = '#';
-    for (let i = 0; i < 6; i++) {
-    color += hexChars[Math.floor(Math.random() * 16)];
-    }
-    return color;
-}
-document.getElementById('color-btn').addEventListener('click', function () {
-    const newColor = getRandomColor();
-    document.body.style.backgroundColor = newColor; // Cambia el color de fondo
-    document.getElementById('color-code').textContent = newColor; // el nombre del color de fondo
-});
-
-function getComplementaryColor(hex) {
-    // Convertir el color hexadecimal a RGB
-    const r = parseInt(hex.slice(1, 3), 16);
-    const g = parseInt(hex.slice(3, 5), 16);
-    const b = parseInt(hex.slice(5, 7), 16);
-
-    // Calcular el color complementario
-    const compR = (255 - r).toString(16).padStart(2, '0');
-    const compG = (255 - g).toString(16).padStart(2, '0');
-    const compB = (255 - b).toString(16).padStart(2, '0');
-
-    return `#${compR}${compG}${compB}`;
-}
-
-function rgbToHsl(r, g, b) {
-    r /= 255;
-    g /= 255;
-    b /= 255;
-
-    const max = Math.max(r, g, b), min = Math.min(r, g, b);
-    let h, s, l = (max + min) / 2;
-
-    if (max === min) {
-        h = s = 0; // gris
-    } else {
-        const d = max - min;
-        s = l > 0.5 ? d / (2 - max - min) : d / (max + min);
-        switch (max) {
-        case r: h = ((g - b) / d + (g < b ? 6 : 0)); break;
-        case g: h = ((b - r) / d + 2); break;
-        case b: h = ((r - g) / d + 4); break;
+        function getRandomColor() {
+            const hexChars = '0123456789ABCDEF';
+            let color = '#';
+            for (let i = 0; i < 6; i++) {
+            color += hexChars[Math.floor(Math.random() * 16)];
+            }
+            return color;
         }
-        h *= 60;
-    }
+        document.getElementById('color-btn').addEventListener('click', function () {
+            const newColor = getRandomColor();
+            document.body.style.backgroundColor = newColor; // Cambia el color de fondo
+            document.getElementById('color-code').textContent = newColor; // el nombre del color de fondo
+        });
 
-  return { h: Math.round(h), s: +(s * 100).toFixed(1), l: +(l * 100).toFixed(1) };
-}
+        // Función para obtener el color complementario
+        function getComplementaryColor(hex) {
+            // Convertir el color hexadecimal a RGB
+            const r = parseInt(hex.slice(1, 3), 16);
+            const g = parseInt(hex.slice(3, 5), 16);
+            const b = parseInt(hex.slice(5, 7), 16);
 
-function hslToHex(h, s, l) {
-    s /= 100;
-    l /= 100;
+            // Calcular el color complementario
+            const compR = (255 - r).toString(16).padStart(2, '0');
+            const compG = (255 - g).toString(16).padStart(2, '0');
+            const compB = (255 - b).toString(16).padStart(2, '0');
 
-    const c = (1 - Math.abs(2 * l - 1)) * s;
-    const x = c * (1 - Math.abs((h / 60) % 2 - 1));
-    const m = l - c / 2;
-    let r, g, b;
+            return `#${compR}${compG}${compB}`;
+        }
+        // Funciones para convertir entre RGB y HSL
+    function rgbToHsl(r, g, b) {
+        r /= 255;
+        g /= 255;
+        b /= 255;
 
-    if (h < 60)      [r, g, b] = [c, x, 0];
-    else if (h < 120)[r, g, b] = [x, c, 0];
-    else if (h < 180)[r, g, b] = [0, c, x];
-    else if (h < 240)[r, g, b] = [0, x, c];
-    else if (h < 300)[r, g, b] = [x, 0, c];
-    else             [r, g, b] = [c, 0, x];
+        const max = Math.max(r, g, b), min = Math.min(r, g, b);
+        let h, s, l = (max + min) / 2;
 
-    r = Math.round((r + m) * 255).toString(16).padStart(2, '0');
-    g = Math.round((g + m) * 255).toString(16).padStart(2, '0');
-    b = Math.round((b + m) * 255).toString(16).padStart(2, '0');
+        if (max === min) {
+            h = s = 0; // gris
+        } else {
+            const d = max - min;
+            s = l > 0.5 ? d / (2 - max - min) : d / (max + min);
+            switch (max) {
+            case r: h = ((g - b) / d + (g < b ? 6 : 0)); break;
+            case g: h = ((b - r) / d + 2); break;
+            case b: h = ((r - g) / d + 4); break;
+            }
+            h *= 60;
+        }
 
-    return `#${r}${g}${b}`;
-}
+        return { h: Math.round(h), s: +(s * 100).toFixed(1), l: +(l * 100).toFixed(1) };
+        }
 
+        //Función para convertir HSL a Hexadecimal
+        function hslToHex(h, s, l) {
+            s /= 100;
+            l /= 100;
 
-function getTriadicColors(hex) {
-    const r = parseInt(hex.slice(1, 3), 16);
-    const g = parseInt(hex.slice(3, 5), 16);
-    const b = parseInt(hex.slice(5, 7), 16);
+            const c = (1 - Math.abs(2 * l - 1)) * s;
+            const x = c * (1 - Math.abs((h / 60) % 2 - 1));
+            const m = l - c / 2;
+            let r, g, b;
 
-    const hsl = rgbToHsl(r, g, b);
-    const triad1 = hslToHex((hsl.h + 120) % 360, hsl.s, hsl.l);
-    const triad2 = hslToHex((hsl.h + 240) % 360, hsl.s, hsl.l);
+            if (h < 60)      [r, g, b] = [c, x, 0];
+            else if (h < 120)[r, g, b] = [x, c, 0];
+            else if (h < 180)[r, g, b] = [0, c, x];
+            else if (h < 240)[r, g, b] = [0, x, c];
+            else if (h < 300)[r, g, b] = [x, 0, c];
+            else             [r, g, b] = [c, 0, x];
 
-    return [triad1, triad2];
-}
+            r = Math.round((r + m) * 255).toString(16).padStart(2, '0');
+            g = Math.round((g + m) * 255).toString(16).padStart(2, '0');
+            b = Math.round((b + m) * 255).toString(16).padStart(2, '0');
 
-document.getElementById('color-btn').addEventListener('click', function () {
-    const baseColor = getRandomColor();
-    const complementaryColor = getComplementaryColor(baseColor);
-    const triadicColors = getTriadicColors(baseColor);
+            return `#${r}${g}${b}`;
+        }
 
-    const paletteBoxes = document.querySelectorAll('.color-box');
-    paletteBoxes[0].style.backgroundColor = baseColor;
-    paletteBoxes[1].style.backgroundColor = complementaryColor;
-    paletteBoxes[2].style.backgroundColor = triadicColors[0];
-    paletteBoxes[3].style.backgroundColor = triadicColors[1];
-    document.getElementById('color-name').textContent = baseColor; 
-    document.getElementById('color-name-two').textContent = complementaryColor;
-    document.getElementById('color-name-three').textContent = triadicColors[0];
-    document.getElementById('color-name-four').textContent = triadicColors[1];
+        // Función para obtener los colores triádicos
+        function getTriadicColors(hex) {
+            const r = parseInt(hex.slice(1, 3), 16);
+            const g = parseInt(hex.slice(3, 5), 16);
+            const b = parseInt(hex.slice(5, 7), 16);
 
-});
+            const hsl = rgbToHsl(r, g, b);
+            const triad1 = hslToHex((hsl.h + 120) % 360, hsl.s, hsl.l);
+            const triad2 = hslToHex((hsl.h + 240) % 360, hsl.s, hsl.l);
+
+            return [triad1, triad2];
+        }
+
+        // Evento para generar la paleta de colores
+        document.getElementById('color-btn').addEventListener('click', function () {
+            const baseColor = getRandomColor();
+            const complementaryColor = getComplementaryColor(baseColor);
+            const triadicColors = getTriadicColors(baseColor);
+
+            const paletteBoxes = document.querySelectorAll('.color-box');
+            paletteBoxes[0].style.backgroundColor = baseColor;
+            paletteBoxes[1].style.backgroundColor = complementaryColor;
+            paletteBoxes[2].style.backgroundColor = triadicColors[0];
+            paletteBoxes[3].style.backgroundColor = triadicColors[1];
+            document.getElementById('color-name').textContent = baseColor; 
+            document.getElementById('color-name-two').textContent = complementaryColor;
+            document.getElementById('color-name-three').textContent = triadicColors[0];
+            document.getElementById('color-name-four').textContent = triadicColors[1];
+
+        });
     </script>
 </body>
 </html>
