--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ p {
     cursor: pointer;
     }
     .copy-icon:hover {
-    stroke: #000000;
+    stroke: #0056b3;
     }
 
 #color-code {
@@ -102,14 +102,14 @@ button:hover {
 <body>
     <div class="container" id="color-container">
         <h1>Paletas de color</h1>
-        <p id="textToCopy">Color de fondo: <span id="color-code">#333</span>
+        <p>Color de fondo: <p id="textToCopy"><span id="color-code">#333</span>
         <svg class="copy-icon" onclick="copyText()" 
         xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
         viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
         class="icon icon-tabler icons-tabler-outline icon-tabler-copy"><path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 
         2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z" /><path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 
-        -2h10c.75 0 1.158 .385 1.5 1" /></svg> </p>
+        -2h10c.75 0 1.158 .385 1.5 1" /></svg> </p></p>
 
         <button id="color-btn">Generar paleta</button>
             <div id="palette" class="palette-style">
@@ -142,6 +142,8 @@ button:hover {
             //añadir un texto emergente
             setTimeout(() => {
                 icon.style.stroke = "#1e00ff"; // Vuelve al color original después de 1 segundo
+                const elemento = document.getElementById("color-code");
+                elemento.textContent = "copiado!";
             }, 1000);
         }).catch(err => {
             alert("Error al copiar el texto: ", err);
