Mejora del la función de copiado

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ button:hover {
 </style>
 <body>
     <div class="container" id="color-container">
-        <h1>Paletas de color</h1>
+        <h2>Generador de paletas al azar</h2>
         <p>Color de fondo: <p id="textToCopy"><span id="color-code">#333</span>
         <svg class="copy-icon" onclick="copyText()" 
         xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
