--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ body {
 }
 
 .container {
+    backdrop-filter: blur(2.4px) saturate(148%);
+    -webkit-backdrop-filter: blur(2.4px) saturate(148%);
     text-align: center;
     padding-top: 20px;
     margin-top: 1rem;
@@ -82,8 +84,8 @@ p {
 }
 
 button {
-    padding: 10px 20px;
-    margin:10px;
+    padding:10px 20px;
+    margin: 20px;
     font-size: 16px;
     color: #fff;
     background-color: #007BFF;
@@ -101,7 +103,7 @@ button:hover {
 <body>
     <div class="container" id="color-container">
         <h2>Generador de paletas al azar</h2>
-        <p>Color de fondo: <p><span id="color-code">#333</span>
+        <p>Color de fondo: <p><span id="color-code">#FFFFFF</span>
         <svg class="copy-icon" onclick="copyText(this)" 
         xmlns="http://www.w3.org/2000/svg" width="15" height="15" 
         viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -113,7 +115,7 @@ button:hover {
         <button id="color-btn">Generar paleta</button>
             <div id="palette" class="palette-style">
                 <div class="color-block">
-                    <p class="color-label"><span id="color-name">#000</span> 
+                    <p class="color-label"><span id="color-name">#FFFFFF</span> 
                         <svg class="copy-icon" onclick="copyText(this)" 
                         xmlns="http://www.w3.org/2000/svg" width="15" height="15" 
                         viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -125,7 +127,7 @@ button:hover {
                     <div class="color-box"></div>
                 </div>
                 <div class="color-block">
-                    <p class="color-label"><span id="color-name-two">#000</span>
+                    <p class="color-label"><span id="color-name-two">#FFFFFF</span>
                         <svg class="copy-icon" onclick="copyText(this)" 
                         xmlns="http://www.w3.org/2000/svg" width="15" height="15" 
                         viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -137,7 +139,7 @@ button:hover {
                     <div class="color-box"></div>
                 </div>
                 <div class="color-block">
-                    <p class="color-label"><span id="color-name-three">#000</span>
+                    <p class="color-label"><span id="color-name-three">#FFFFFF</span>
                         <svg class="copy-icon" onclick="copyText(this)" 
                         xmlns="http://www.w3.org/2000/svg" width="15" height="15" 
                         viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -149,7 +151,7 @@ button:hover {
                     <div class="color-box"></div>
                 </div>
                 <div class="color-block">
-                    <p class="color-label"><span id="color-name-four">#000</span>
+                    <p class="color-label"><span id="color-name-four">#FFFFFF</span>
                         <svg class="copy-icon" onclick="copyText(this)" 
                         xmlns="http://www.w3.org/2000/svg" width="15" height="15" 
                         viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
