Todos los directorios añadidos

--- a/paginaPrincipal/inicio.html
+++ b/paginaPrincipal/inicio.html
@@ -1,22 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isla</title>
-</head>
-<body>
-    <h1>Isla del color</h1>
-    <nav>
-        <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -38,15 +19,15 @@
         <ul class="pirate-options" id="menuLista">
             <li>
                 <span class="material-symbols-outlined menu-icon-option">map</span>
-                Colores por tema
+                <a href="../temaColores/index.html">Colores por tema</a>
             </li>
             <li>
                 <span class="material-symbols-outlined menu-icon-option">colorize</span>
-                Ingresar color
+                <a href="../ingresarColor/index.html">Ingresar color</a>
             </li>
             <li>
                 <span class="material-symbols-outlined menu-icon-option">shuffle</span>
-                Colores al azar
+                <a href="../generadoDePaletasDeColores/index.html">Colores al azar</a>
             </li>
         </ul>
     </div>
