--- a/paginaPrincipal/inicio.html
+++ b/paginaPrincipal/inicio.html
@@ -9,24 +9,20 @@
 </head>
 <body>
 
-    <div class="pirate-menu-container">
+    <div>
         
-        <button class="nav-btn" onclick="toggleIslandMenu(this)">
+        <button>
             Menú
-            <span class="material-symbols-outlined">anchor</span>
         </button>
 
-        <ul class="pirate-options" id="menuLista">
+        <ul>
             <li>
-                <span class="material-symbols-outlined menu-icon-option">map</span>
                 <a href="../temaColores/index.html">Colores por tema</a>
             </li>
             <li>
-                <span class="material-symbols-outlined menu-icon-option">colorize</span>
                 <a href="../ingresarColor/index.html">Ingresar color</a>
             </li>
             <li>
-                <span class="material-symbols-outlined menu-icon-option">shuffle</span>
                 <a href="../generadoDePaletasDeColores/index.html">Colores al azar</a>
             </li>
         </ul>
