--- a/temaColores/index.html
+++ b/temaColores/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temas por Color</title>
+    <title>Colores por tema</title>
 </head>
 <body>
-    <h1>Página de temas por color</h1>
+    <h1>Página de colores por tema</h1>
 </body>
 </html>
