añadiendo estilo clasico

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -9,24 +9,19 @@
 </head>
 <body>
 
-    <div>
-        
-        <button>
-            Menú
-        </button>
-
+    <nav>
         <ul>
             <li>
-                <a href="../temaColores/index.html">Colores por tema</a>
+                <a href="temaColores/index.html">Colores por tema</a>
             </li>
             <li>
-                <a href="../ingresarColor/index.html">Ingresar color</a>
+                <a href="ingresarColor/index.html">Ingresar color</a>
             </li>
             <li>
-                <a href="../generadoDePaletasDeColores/index.html">Colores al azar</a>
+                <a href="generadoDePaletasDeColores/index.html">Colores al azar</a>
             </li>
         </ul>
-    </div>
+    </nav>
 
     <script src="inicio.js"></script>
 </body>
