menu de colores al azar funcional

--- a/islaDelColor/generadoDePaletasDeColores/index.html
+++ b/islaDelColor/generadoDePaletasDeColores/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <nav class="menu">
+        <ul>
+            <li><a href="../inicio.html">Inicio</a></li>
+            <li><a href="../temaColores/index.html">Colores por tema</a></li>
+            <li><a href="../generadoDePaletasDeColores/index.html">Colores al azar</a></li>
+            <li><a href="../ingresarColor/index.html">Ingresar color</a></li>
+        </ul>
+    </nav>
+
     <div class="container" id="color-container">
         <h2>Generador de paletas al azar</h2>
         <p>Color de fondo: <p><span id="color-code">#FFFFFF</span>
