--- a/islaDelColor/generadoDePaletasDeColores/index.html
+++ b/islaDelColor/generadoDePaletasDeColores/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    
     <nav class="menu">
         <ul>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-map-route"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7l6 -3l6 3l6 -3v13l-6 3l-6 -3l-6 3v-13" /><path d="M9 12v.01" /><path d="M6 13v.01" /><path d="M17 15l-4 -4" /><path d="M13 15l4 -4" /></svg>
             <li><a href="../inicio.html">Inicio</a></li>
             <li><a href="../temaColores/index.html">Colores por tema</a></li>
             <li><a href="../generadoDePaletasDeColores/index.html">Colores al azar</a></li>
