--- a/islaDelColor/ingresarColor/index.html
+++ b/islaDelColor/ingresarColor/index.html
@@ -18,16 +18,20 @@
         </ul>
     </nav>
 
-    <div class="color-picker">
+    <div class="contenedor">
+        <div class="color-picker">
     <h1>Página para ingresar un color</h1>
-        <form id="colorForm">
-            <label for="favcolor">Elige tu color favorito:</label>
-            <input type="color" id="favcolor" name="favcolor">
-            <input type="submit" value="Generar Paleta">
-        </form>
-    </div>
+            <form id="colorForm">
+                <label for="favcolor">Elige tu color favorito:</label>
+                <input type="color" id="favcolor" name="favcolor">
+                <input type="submit" value="Generar Paleta">
+            </form>
+        </div>
+    
 
     <div class="palette" id="palette"></div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
