Ingresar color listo

--- a/islaDelColor/temaColores/indexTemas.html
+++ b/islaDelColor/temaColores/indexTemas.html
@@ -19,7 +19,11 @@
         </ul>
     </nav>
 
-    <h1>Página de colores por tema</h1>
+    <header>
+        <h1>Colores por tema</h1>
+        <p>Selecciona un tema para ver una paleta de colores relacionada.</p>
+    </header>    
 
+    <script src="script.js"></script>
 </body>
 </html>
