--- a/islaDelColor/ingresarColor/indexIngresarColor.html
+++ b/islaDelColor/ingresarColor/indexIngresarColor.html
@@ -19,7 +19,7 @@
     </nav>
 
         <div class="container" id="color-container">
-    <h2>Generador de paletas a partir de un color</h2>
+    <h2>Generador de paleta a partir de un color</h2>
 
     <!-- Formulario para ingresar color -->
     <form id="color-form">
@@ -97,10 +97,39 @@
             </p>
             <div class="color-box"></div>
         </div>
-    </div>
-</div>
 
+        <!--Más paletas -->
+        <div class="color-block">
+            <p class="color-label"><span id="color-name-five">#FFFFFF</span>
+                <svg class="copy-icon" onclick="copyText(this)" 
+                    xmlns="http://www.w3.org/2000/svg" width="15" height="15" 
+                    viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" 
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 
+                    2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z" />
+                    <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 
+                    -2h10c.75 0 1.158 .385 1.5 1" />
+                </svg>
+            </p>
+            <div class="color-box"></div>
+        </div>
 
+        <div class="color-block">
+            <p class="color-label"><span id="color-name-six">#FFFFFF</span>
+                <svg class="copy-icon" onclick="copyText(this)" 
+                    xmlns="http://www.w3.org/2000/svg" width="15" height="15" 
+                    viewBox="0 0 24 24" fill="none" stroke="#1e00ff" stroke-width="2" 
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M7 7m0 2.667a2.667 2.667 0 0 1 2.667 -2.667h8.666a2.667 2.667 0 0 1 2.667 2.667v8.666a2.667 2.667 0 0 1 -2.667 
+                    2.667h-8.666a2.667 2.667 0 0 1 -2.667 -2.667z" />
+                    <path d="M4.012 16.737a2.005 2.005 0 0 1 -1.012 -1.737v-10c0 -1.1 .9 -2 2 
+                    -2h10c.75 0 1.158 .385 1.5 1" />
+                </svg>
+            </p>
+            <div class="color-box"></div>
+        </div>
     <script src="script.js"></script>
 </body>
 </html>
