añadiendo tesoros a la isla

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -17,8 +17,10 @@
     <header class="menu">
         <ul>
         <li><a href="#hero">Inicio</a></li>
+        <li><a href="#historia">Leyenda</a></li>
+        <li><a href="#brújula">Brújula</a></li>
         <li><a href="#mapa">Mapa</a></li>
-        <!--Cambiar tesoros por como son las paletas crómaticas y las funciones de cada una los temas, el generador y al azar-->
+        <!--Descripción de las funciones de cada una los temas, el generador y al azar-->
         <li><a href="#tesoros">Tesoros</a></li>
         </ul>
     </header>
@@ -36,12 +38,12 @@
 
     <!-- Narrativa -->
     <section id="historia" class="container">
-        <h2>La leyenda</h2>
+        <h2>Leyenda</h2>
         <p>
         En las profundidades del océano, más allá de las rutas conocidas,  
         se oculta una isla envuelta en misterio y leyendas.  
-        Dicen los marineros que en sus costas embrujadas reposan cofres repletos de tesoros coloridos 💎,  
-        y que una brújula mágica 🧭 guía a los valientes hacia secretos jamás revelados.  
+        Dicen los marineros que en sus costas embrujadas reposan cofres repletos de tesoros coloridos,  
+        y que una brújula mágica guía a los valientes hacia secretos jamás revelados.  
 
         Aquí cada color es un destino, cada matiz un hechizo.  
         Atrévete a explorar, noble aventurero, pues la Isla del Color  
@@ -61,23 +63,10 @@
         </ul>
     </section>
 
-    <!-- Sección de tesoros cromáticos -->
+    <!-- Sección de tesoros -->
     <section id="tesoros" class="container">
-        <h2>Tesoros cromáticos</h2>
-        <div class="palette-style">
-        <div class="color-block">
-            <span class="color-label">Rubí</span>
-            <div class="color-box" style="background:#b22222;"></div>
-        </div>
-        <div class="color-block">
-            <span class="color-label">Esmeralda</span>
-            <div class="color-box" style="background:#228b22;"></div>
-        </div>
-        <div class="color-block">
-            <span class="color-label">Zafiro</span>
-            <div class="color-box" style="background:#1e90ff;"></div>
-        </div>
-        </div>
+        <h2>Tesoros</h2>
+        <img src="https://i.pinimg.com/originals/6f/17/81/6f1781ab35ac1575104b9cb459b38aea.png" alt="Teoria del color">
     </section>
 
     <!-- Footer -->
