--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -18,7 +18,7 @@
         <ul>
         <li><a href="#hero">Inicio</a></li>
         <li><a href="#historia">Leyenda</a></li>
-        <li><a href="#brújula">Brújula</a></li>
+        <li><a href="#brujula">Brújula</a></li>
         <li><a href="#mapa">Mapa</a></li>
         <!--Descripción de las funciones de cada una los temas, el generador y al azar-->
         <li><a href="#tesoros">Tesoros</a></li>
@@ -63,9 +63,22 @@
         </ul>
     </section>
 
+    <!-- Sección de brújula -->
+    <section id="brujula" class="container">
+        <h2><img class="brujula" src="https://img.freepik.com/fotos-premium/brujula-dibujos-animados-caja-metal-mango-metal-generativo-ai_791316-26071.jpg" alt="Brújula">Brújula</h2>
+        <p>
+            En colores por tema, la brújula te guiará a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante.
+            Ingresar un color te permitirá descubrir paletas armoniosas basadas en tu elección.
+            Y si te sientes aventurero, el generador de paletas al azar te llevará a explorar combinaciones inesperadas y únicas.
+        </p>
+    </section>
+
     <!-- Sección de tesoros -->
     <section id="tesoros" class="container">
-        <h2>Tesoros</h2>
+        <h2>Guía de tesoros</h2>
+        <p> Aqui encontrarás información sobre la teoría del color y cómo combinar colores de manera efectiva para tus proyectos.
+
+        </p>
         <img src="https://i.pinimg.com/originals/6f/17/81/6f1781ab35ac1575104b9cb459b38aea.png" alt="Teoria del color">
     </section>
 
