estilos de cada página agregados

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -33,7 +33,7 @@
         y consigue lo que nadie ha logrado:  
         dominar la combinación de colores perfecta para cada ocasión.
         </p>
-        <button>Explorar ahora</button>
+        <button class="btn" onclick="irASeccion()">Explorar ahora</button>
     </section>
 
     <!-- Narrativa -->
@@ -59,7 +59,7 @@
         <ul>
         <li><a href="temaColores/indexTemas.html">Colores por tema</a></li>
         <li><a href="ingresarColor/indexIngresarColor.html">Ingresar color</a></li>
-        <li><a href="generadoDePaletasDeColores/indexGenerador.html">Colores al azar</a></li>
+        <li><a href="generadoDePaletasDeColores/indexGenerador.html">Paletas al azar</a></li>
         </ul>
     </section>
 
@@ -67,9 +67,9 @@
     <section id="brujula" class="container">
         <h2><img class="brujula" src="https://img.freepik.com/fotos-premium/brujula-dibujos-animados-caja-metal-mango-metal-generativo-ai_791316-26071.jpg" alt="Brújula">Brújula</h2>
         <p>
-            En colores por tema, la brújula te guiará a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante.
-            Ingresar un color te permitirá descubrir paletas armoniosas basadas en tu elección.
-            Y si te sientes aventurero, el generador de paletas al azar te llevará a explorar combinaciones inesperadas y únicas.
+            En <b>colores por tema</b>, la brújula te guiará a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante.
+            <b>Ingresar un color</b> te permitirá descubrir paletas armoniosas basadas en tu elección.
+            Y si te sientes aventurero, <b>el generador de paletas al azar</b> te llevará a explorar combinaciones inesperadas y únicas.
         </p>
     </section>
 
