función para crear colores nuevos

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -18,15 +18,14 @@
         <ul>
         <li><a href="#hero">Inicio</a></li>
         <li><a href="#historia">Leyenda</a></li>
-        <li><a href="#brujula">Brújula</a></li>
-        <li><a href="#mapa">Mapa</a></li>
+        <li><a href="#explorar">Explorar</a></li>
         <li><a href="#tesoros">Tesoros</a></li>
         </ul>
     </header>
 
     <!-- Hero principal -->
     <section id="hero" class="hero" >
-        <h1>🏴‍☠️ ¡Bienvenido a la Isla del Color! 🏝️</h1>
+        <h1>🏴‍☠️ ¡Bienvenido a la Isla del Color! 🏝️ </h1>
         <p>
         Embárcate en sus profundas y místicas aguas  
         y consigue lo que nadie ha logrado:  
@@ -50,8 +49,8 @@
         </p>
     </section>
 
-    <!-- Mapa del tesoro -->
-    <section id="mapa" class="menu-mapa">
+    <!-- Explorar -->
+    <section id="explorar" class="menu-mapa">
         <h2>
         🗺️ Mapa
         </h2>
@@ -60,10 +59,7 @@
         <li><a href="ingresarColor/indexIngresarColor.html">Ingresar color</a></li>
         <li><a href="generadoDePaletasDeColores/indexGenerador.html">Paletas al azar</a></li>
         </ul>
-    </section>
 
-    <!-- Sección de brújula -->
-    <section id="brujula">
         <h2><img class="brujula" src="https://img.freepik.com/fotos-premium/brujula-dibujos-animados-caja-metal-mango-metal-generativo-ai_791316-26071.jpg" alt="Brújula">Brújula</h2>
         <p>
             En <b>colores por tema</b>, la brújula te guiará a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante.
