diseño de mejorado

--- a/islaDelColor/temaColores/indexTemas.html
+++ b/islaDelColor/temaColores/indexTemas.html
@@ -24,7 +24,9 @@
         <p>Selecciona un tema para ver una paleta de colores relacionada.</p>
     </header>    
 
-    <label for="tema">Tema:</label>
+   <div class="form-container">
+  <h2>⚓ Configura tu paleta pirata ⚓</h2>
+  <label for="tema">Tema:</label>
   <select id="tema">
     <option value="pastel">Pastel</option>
     <option value="vibrante">Vibrante</option>
@@ -44,6 +46,8 @@
     <option value="gris">Gris</option>
     <option value="blanco">Blanco</option>
   </select>
+</div>
+
 
   <button class="buscar" onclick="generateThemePalette()">Generar Paleta</button>
 
